@@ -1,5 +1,13 @@
 *SVN*
 
+* Specify the revision to release via the :revision variable (defaults to latest revision)
+
+* Allow variables to be set via the cli using the -s switch
+
+* Log checkouts to a "revisions.log" file
+
+* Changed behavior of checkout to use the timestamp as the release name, instead of the revision number
+
 * Added CVS module (very very experimental!)
 
 * Works with public keys now, for passwordless deployment
